fix:longQuoteCenter align and align-last center #113

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1083,6 +1083,11 @@ wpn-detail-view:has(span[data-bs-toggle="popover"]:hover) details:not([open]) .s
   content: '?';
 }
 
+#textcontent-pb .longQuoteCenter {
+  text-align: center !important;;
+  text-align-last: center !important;
+}
+
 // @rend
 
 .typescriptFloatRight {
